edit page 1 on desktop and mobile view

--- a/templates/static/assets/scss/global/_colors.scss
+++ b/templates/static/assets/scss/global/_colors.scss
@@ -1,6 +1,6 @@
 $light: #F9F9F9;
 $dark: #676363;
-$primary: #A5CD38;
+$primary: #C69214;
 $primary-light:#96bc2f;
 $secondary: #72BFC5;
 $danger: #E31E26;
