--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -35,27 +35,27 @@
 <body>
 <header class="header">
     <div class="container">
-        <div class="row">
-            <div class="col-sm">
-
-
+        <ul class="list-unstyled row d-md-flex mb-0">
+            <li class="col-12 col-md-4">
                 <a href="tel:+14242530158">
-                    <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a></div>
-            <div class="col-sm "><a href="mailto:info@into-pipe.com">
-                <i class="far fa-envelope-open"></i> info@into-pipe.com</a>
-            </div>
-            <div class="col-sm text-right ">
+                    <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a>
+            </li>
 
+            <li class="col-8 col-md-4">
+                <a href="mailto:info@into-pipe.com">
+                    <i class="far fa-envelope-open"></i> info@into-pipe.com</a>
+            </li>
+
+            <li class="ml-auto col-3 col-md-4 text-right">
                 <a href="#"> EN </a>
                 <a>|</a>
                 <a href="#"> DE </a>
-
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 
 </header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-1">
     <div class="container">
         <a class="navbar-brand" href="{% url 'pages:homepage' %}"
         ><img src="../static/assets/img/Intopipe.png" alt="INTOPIPE LOGO" width="80" height="67.33"
@@ -80,7 +80,7 @@
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="{% url 'posts:post_list' %}">our story</a>
+                    <a class="nav-link" href="{% url 'posts:post_list' %}">our story</a>
                 </li>
                 <li class="nav-item">
                     <div class="dropdown navbar-nav" id="navbarLightNavDropdown">
@@ -90,12 +90,12 @@
                             Products
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href={% url 'products:paper-tube-list' %}>
-                                paper tube
+                            <a class="dropdown-item" style="text-transform: none" href={% url 'products:paper-tube-list' %}>
+                                Paper Core
                             </a>
 
-                            <a class="dropdown-item" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
-                            <a class="dropdown-item" href={% url 'products:metalic-pipe-list' %}>metallic pipe</a>
+                            <a class="dropdown-item" style="text-transform: none" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
+                            <a class="dropdown-item" style="text-transform: none" href={% url 'products:metalic-pipe-list' %}>Metallic Pipe</a>
                         </div>
                     </div>
                 </li>
@@ -109,9 +109,9 @@
     </div>
 </nav>
 
-<div class="jumbotron banner-in text-center banner-top uppercase flex">
+<div class="jumbotron banner-index text-center banner-top uppercase flex">
     <div class="container">
-        <h1 class="display-4 mb-3 glow"><br>Reasonable price, Excellent Quality, and Prompt Delivery
+        <h1 class="display-4 mb-3 glow text-info" style="font-family: 'UniviaProBold'; text-shadow: 0 0 20px black;"><br>Reasonable price, Excellent Quality, and Prompt Delivery
         </h1>
         <br>
         <br>
@@ -125,7 +125,7 @@
 </div>
 
 <main class="index">
-    <section class="benefits py-5">
+    <section class="benefits py-md-5 pt-0 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-6 mt-4">
@@ -219,7 +219,7 @@
                             <div class="row">
                                 <div class="col-lg-12"></div>
                                 <div class="col-lg-12">
-                                    <h1 class="display-4 mb-2 c-cta-double__title">
+                                    <h1 class="display-4 mb-2 c-cta-double__title" style="color: aqua;">
                                         Please check out our catalogue!
                                     </h1>
                                     {% if  home_feature.button_text %}
@@ -229,7 +229,7 @@
                                         </a>
                                     {% else %}
                                         <a href="{{ home_feature.get_upload_url }}"
-                                           class="btn btn-success text-center">
+                                           class="btn btn-dark border border-info rounded text-center" style="font-weight: 500;">
                                             TOUCH HERE!
                                         </a>
                                     {% endif %}
@@ -378,7 +378,7 @@
         </div>
     </section>
 
-    <section class="py-5">
+    <section class="py-md-5 pb-0">
         <div class="container">
             <div class="row text-center d-block">
                 <form method="POST" class = 'form-horizontal' style="background-color:#F9F9F9;" id="form_order">
@@ -427,12 +427,10 @@
                         <div class="col-md-6 mb-3 px-3">
                             
                             <input type="text" class="form-control" id="phone" name ="phone" placeholder="Your Phone Number:" >
-                        </div>
-                        
-                    <div class="text-center col-md-12 mb-3">
-                    <button type="submit" class="col-md-6 mb-3 btn" style="background-color:#C69214;">Get a quote!</button> 
+                        </div> 
                     </div>
-                        </div>
+                    <div class="text-center mb-3">
+                        <button type="submit" class="col-md-3 mb-3 btn btn-dark rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                     </div>
             </div>
         </div>
@@ -444,9 +442,10 @@
 <footer>
     <div class="top py-5 ">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3 style="font-family:fira; color:#c69214">INTOPIPE</h3>
+            <div class="row fonteFoter">
+
+                <div class="col-12 col-md-6 text-center text-md-left">
+                    <h3 class="text-info">INTOPIPE</h3>
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'pages:homepage' %}">Home</a>
@@ -455,57 +454,27 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'pages:about' %}">OUR STORY</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Our Services</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
-                        </br>
-                        <li class="col-md-6">
+
+                        <li class="col-md-6 mt-3 mt-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../static/assets/img/final.png" alt=""/>
+                                <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
-
                     </ul>
-
                 </div>
+                
 
-
-                <div class="col-md-6">
-                    <div class="row">
-                        <!--<div class="col-sm-6">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../static/assets/img/final.png" alt=""/>
-                            </a>
-                        </div>-->
-                        <div class="social-icons col-md-6" style="margin-right: 29%">
-
-                            <ul class="list-unstyled text-center mb-0">
-
-                                <li class="list-unstyled-item" style="height:50px">
-                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/">
-                                        <i class="fab fa-linkedin-in"></i>
-                                    </a>
-                                </li>
-                                <li class="list-unstyled-item" style="height:48px;margin-right: 10%">
-                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                                <li class="list-unstyled-item">
-                                    <a href="https://www.instagram.com/kindermanstradingabfa">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 text-left">
-
-                        <h3>Contact Us</h3>
+                <div class="col-12 col-md-5">
+                    <div class="col-sm-6 text-center mx-auto ml-md-0">
+                        <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
                                 Leuvensesteenweg 209
@@ -519,9 +488,9 @@
                             <li class="nav-item pb-1">
                                 <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
                             </li>
-                            <li class="nav-item pb-1">
+                            <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
-                                        width="120%" height="100%" frameborder="0" style="border-radius:5px"
+                                        width="100%" height="100%" frameborder="0" style="border-radius:5px"
                                         allowfullscreen="" aria-hidden="true" tabindex="0">KTA
                                 </iframe>
                                 <a class="nav-link pl-0 pt-0"><b></b></a>
@@ -530,10 +499,50 @@
                         </ul>
                     </div>
                 </div>
+
+
+
+                <div class="col-12 col-md-1 mt-auto">
+                    <div class="row">
+                        <!--<div class="col-sm-6">
+                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                                <img src="../static/assets/img/final.png" alt=""/>
+                            </a>
+                        </div>-->
+                        <div class="social-icons w-100 ml-auto">
+
+                            <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
+
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                        <i class="fab fa-linkedin-in fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw" style="color: #c69214;">
+                                        <i class="fab fa-youtube fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                        <i class="fab fa-instagram fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://api.whatsapp.com/send?phone=447894456554" style="color: #c69214;">
+                                        <i class="fab fa-whatsapp fa-2x"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
-    </div>
+    
     <div class="bottom">
         <ul class="nav justify-content-center mb-0">
             <li class="nav-item">
@@ -556,5 +565,8 @@
 });
 
 </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
