--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -296,8 +296,8 @@
                                 </p>
                                 <p class="thin"><b></b></p>
                                 <p class="thin"></p>
-
                             </div>
+                            
                             <div class="col-md-3 d-none d-md-block">
                                 <div class="single-quote-image left">
                                     <img
@@ -330,7 +330,63 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mt-5 mt-md-0">
+
+
+                <form method="POST" class = 'form-horizontal d-md-none col-md-0' style="background-color:#F9F9F9;" id="form_order">
+                    {% csrf_token %}
+                    <div class="form-row " >
+                        <div class="col-md-6 mb-3 pt-5" >
+                            Material Type:
+                            <select name="material" id="material" required >
+                                {% for material in materials %}
+                                <option value={{material.title}} selected>{{material.title}}</option>
+                                {% endfor %}
+                                
+                            </select>
+                        </div>
+                        <div class="col-md-6 mb-3 pt-5" >
+                            Your LOGO:
+                            <input type="file" id="logo" name ="logo">
+                        </div>
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="number" step="0.01" class="form-control" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                        </div>
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="number" step="0.01" class="form-control" id="thickness" name ="thickness" placeholder="Thickness:" >
+                        </div>
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="number" step="0.01" class="form-control" id="length" name ="length" placeholder="Length:" >
+                        </div>
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="number" class="form-control" id="quantity" name ="quantity" placeholder="Quantity:" >
+                        </div>
+                        
+
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="text" class="form-control" id="name" name ="name" placeholder="Your Name:" required>
+                        </div>
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input class="form-control" type="email" name="email" placeholder="Your Email:">
+                        </div>
+
+                        <div class="col-md-6 mb-3 px-3">
+                            
+                            <input type="text" class="form-control" id="phone" name ="phone" placeholder="Your Phone Number:" >
+                        </div> 
+                    </div>
+                    <div class="text-center mb-3 px-3">
+                        <button type="submit" class="col-md-3 mb-3 btn btn-dark rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                    </div>
+                </form> 
+
+                
+                <div class="col-lg-3 mt-5 mt-md-0 d-md-inline-block">
                     <img
                             class="img-fluid mx-auto d-block"
                             src="../static/assets/img/black-white/01.jpg"
@@ -349,19 +405,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-md-left text-center py-3">
-                    <a href="https://www.ups.com/track?loc=en_DE&requester=ST/" class="btn btn-dark">UPS TRACKING</a>
+                    <a href="https://www.ups.com/track?loc=en_DE&requester=ST/"><button class="w-50 btn btn-dark px-0">UPS TRACKING</button></a>
                     <img src="../static/assets/img/UPS.png" alt="UPS"/>
-
                 </div>
+
                 <div class="col-md-4 text-center py-3">
-                    <a href="https://www.fedex.com/en-de/tracking.html" class="btn btn-dark">FEDEX TRACKING</a>
+                    <a href="https://www.fedex.com/en-de/tracking.html"><button class="w-50 btn btn-dark px-0">FEDEX TRACKING</button></a>
                     <img src="../static/assets/img/fed.png" alt="FedEx"/>
                 </div>
+
                 <div class="col-md-4 text-md-right text-center py-3">
-                    <a href="https://www.dhl.de/en/geschaeftskunden/express/verfolgen.html" class="btn btn-dark">DHL
-                        Tracking</a>
+                    <a href="https://www.dhl.de/en/geschaeftskunden/express/verfolgen.html"><button class="w-50 btn btn-dark px-0">DHL Tracking</button></a>
                     <img src="../static/assets/img/DHL.png" alt="DHL"/>
                 </div>
+
             </div>
         </div>
     </section>
@@ -378,7 +435,7 @@
         </div>
     </section>
 
-    <section class="py-md-5 pb-0">
+    <section class="py-md-5 pb-0 d-none d-md-block">
         <div class="container">
             <div class="row text-center d-block">
                 <form method="POST" class = 'form-horizontal' style="background-color:#F9F9F9;" id="form_order">
@@ -429,9 +486,10 @@
                             <input type="text" class="form-control" id="phone" name ="phone" placeholder="Your Phone Number:" >
                         </div> 
                     </div>
-                    <div class="text-center mb-3">
+                    <div class="text-center mb-3 px-3">
                         <button type="submit" class="col-md-3 mb-3 btn btn-dark rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                     </div>
+                </form>    
             </div>
         </div>
     </section>
