--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -228,7 +228,125 @@
     </section>
     <div class="py-5"></div>
 </main>
+
 <footer>
+    <div class="top py-5 ">
+        <div class="container">
+            <div class="row fonteFoter">
+
+                <div class="col-12 col-md-6 text-center text-md-left">
+                    <h3 class="text-info">INTOPIPE</h3>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'pages:homepage' %}">Home</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'pages:about' %}">OUR STORY</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Our Services</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+
+                        <li class="col-md-6 mt-3 mt-md-0">
+                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                                <img src="../static/assets/img/fsc-1.png" alt=""/>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                
+
+                <div class="col-12 col-md-5">
+                    <div class="col-sm-6 text-center mx-auto">
+                        <h3 class="text-info">Contact Us</h3>
+                        <ul class="nav flex-column">
+                            <li class="nav-item pb-1">
+                                Leuvensesteenweg 209
+                            </li>
+                            <li class="nav-item pb-1">
+                                2800 Mechelen
+                            </li>
+                            <li class="nav-item pb-1">
+                                Belgium
+                            </li>
+                            <li class="nav-item pb-1">
+                                <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
+                            </li>
+                            <li class="nav-item">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
+                                        width="100%" height="100%" frameborder="0" style="border-radius:5px"
+                                        allowfullscreen="" aria-hidden="true" tabindex="0">KTA
+                                </iframe>
+                                <a class="nav-link pl-0 pt-0"><b></b></a>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
+                <div class="col-12 col-md-1 mt-auto">
+                    <div class="row">
+                        <!--<div class="col-sm-6">
+                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                                <img src="../static/assets/img/final.png" alt=""/>
+                            </a>
+                        </div>-->
+                        <div class="social-icons w-100 ml-auto">
+
+                            <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
+
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                        <i class="fab fa-linkedin-in fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw" style="color: #c69214;">
+                                        <i class="fab fa-youtube fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                        <i class="fab fa-instagram fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://api.whatsapp.com/send?phone=447894456554" style="color: #c69214;">
+                                        <i class="fab fa-whatsapp fa-2x"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+    
+    <div class="bottom">
+        <ul class="nav justify-content-center mb-0">
+            <li class="nav-item">
+                <a class="nav-link" href="#">All Rights Reserved 2022 ©</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">INTOPIPE ®</a>
+
+            </li>
+        </ul>
+
+    </div>
+</footer>
+<!-- <footer>
     <div class="top py-5 ">
         <div class="container">
             <div class="row">
@@ -336,7 +454,7 @@
         </ul>
 
     </div>
-</footer>
+</footer> -->
 
 <script src="../static/assets/plugins/jquery/jquery-3.5.1.slim.min.js"></script>
 <script src="../static/assets/plugins/jquery.sticky.js"></script>
