--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -29,84 +29,82 @@
 </head>
 
 <body>
-<header class="header">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-
-
-                <a href="tel:+14242530158">
-                    <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a></div>
-            <div class="col-sm "><a href="mailto: info@into-pipe.com">
-                <i class="far fa-envelope-open"></i> info@into-pipe.com</a>
-            </div>
-            <div class="col-sm text-right ">
-
-                <a href="#"> EN </a>
-                <a>|</a>
-                <a href="#"> DE </a>
-
-            </div>
-        </div>
-    </div>
-
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'pages:homepage' %}"
-        ><img src="../static/assets/img/Intopipe.png" alt="INTOPIPE LOGO" width="80" height="67.33"
-        /></a>
-        <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                controls="navbarNavLightDropdown"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'pages:homepage' %}"
-                    >Homeland <span class="sr-only">(current)</span></a
-                    >
+    <header class="header">
+        <div class="container">
+            <ul class="list-unstyled row d-md-flex mb-0">
+                <li class="col-12 col-md-4">
+                    <a href="tel:+14242530158">
+                        <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'pages:about' %}">our story</a>
+    
+                <li class="col-8 col-md-4">
+                    <a href="mailto:info@into-pipe.com">
+                        <i class="far fa-envelope-open"></i> info@into-pipe.com</a>
                 </li>
-
-                <li class="nav-item">
-                    <div class="dropdown navbar-nav" id="navbarLightNavDropdown">
-                        <a class="nav-link dropdown-toggle" href="{% url 'pages:homepage' %}" id="navbardrop"
-                           role="button"
-                           data-toggle="dropdown" aria-expanded="false">
-                            Products
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href={% url 'products:paper-tube-list' %}>
-                                paper tube
-                            </a>
-
-                            <a class="dropdown-item" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
-                            <a class="dropdown-item" href={% url 'products:metalic-pipe-list' %}> Metallic Pipe</a>
-                        </div>
-                    </div>
+    
+                <li class="ml-auto col-3 col-md-4 text-right">
+                    <a href="#"> EN </a>
+                    <a>|</a>
+                    <a href="#"> DE </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
-                </li>
-
             </ul>
-
-
         </div>
-    </div>
-</nav>
+    
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-1">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'pages:homepage' %}"
+            ><img src="../static/assets/img/Intopipe.png" alt="INTOPIPE LOGO" width="80" height="67.33"
+            /></a>
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"
+                        >Homeland <span class="sr-only">(current)</span></a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'posts:post_list' %}">our story</a>
+                    </li>
+                    <li class="nav-item">
+                        <div class="dropdown navbar-nav" id="navbarLightNavDropdown">
+                            <a class="nav-link dropdown-toggle" href="{% url 'pages:homepage' %}" id="navbardrop"
+                               role="button"
+                               data-toggle="dropdown" aria-expanded="false">
+                                Products
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" style="text-transform: none" href={% url 'products:paper-tube-list' %}>
+                                    Paper Core
+                                </a>
+    
+                                <a class="dropdown-item" style="text-transform: none" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
+                                <a class="dropdown-item" style="text-transform: none" href={% url 'products:metalic-pipe-list' %}>Metallic Pipe</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
+                    </li>
+    
+                </ul>
+    
+            </div>
+        </div>
+    </nav>
+
 <section class="c-breadcrumb">
     <div class="container">
         <div class="row">
@@ -186,9 +184,10 @@
 <footer>
     <div class="top py-5 ">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3 style="font-family:fira; color:#c69214">INTOPIPE</h3>
+            <div class="row fonteFoter">
+
+                <div class="col-12 col-md-6 text-center text-md-left">
+                    <h3 class="text-info">INTOPIPE</h3>
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'pages:homepage' %}">Home</a>
@@ -197,57 +196,27 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'pages:about' %}">OUR STORY</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Our Services</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
-                        </br>
-                        <li class="col-md-6">
+
+                        <li class="col-md-6 mt-3 mt-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../static/assets/img/final.png" alt=""/>
+                                <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
-
                     </ul>
-
                 </div>
+                
 
-
-                <div class="col-md-6">
-                    <div class="row">
-                        <!--<div class="col-sm-6">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../static/assets/img/final.png" alt=""/>
-                            </a>
-                        </div>-->
-                        <div class="social-icons col-md-6" style="margin-right: 29%">
-
-                            <ul class="list-unstyled text-center mb-0">
-
-                                <li class="list-unstyled-item" style="height:50px">
-                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/">
-                                        <i class="fab fa-linkedin-in"></i>
-                                    </a>
-                                </li>
-                                <li class="list-unstyled-item" style="height:48px;margin-right: 10%">
-                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                                <li class="list-unstyled-item">
-                                    <a href="https://www.instagram.com/kindermanstradingabfa">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 text-left">
-
-                        <h3>Contact Us</h3>
+                <div class="col-12 col-md-5">
+                    <div class="col-sm-6 text-center mx-auto">
+                        <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
                                 Leuvensesteenweg 209
@@ -261,9 +230,9 @@
                             <li class="nav-item pb-1">
                                 <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
                             </li>
-                            <li class="nav-item pb-1">
+                            <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
-                                        width="120%" height="100%" frameborder="0" style="border-radius:5px"
+                                        width="100%" height="100%" frameborder="0" style="border-radius:5px"
                                         allowfullscreen="" aria-hidden="true" tabindex="0">KTA
                                 </iframe>
                                 <a class="nav-link pl-0 pt-0"><b></b></a>
@@ -272,10 +241,50 @@
                         </ul>
                     </div>
                 </div>
+
+
+
+                <div class="col-12 col-md-1 mt-auto">
+                    <div class="row">
+                        <!--<div class="col-sm-6">
+                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                                <img src="../static/assets/img/final.png" alt=""/>
+                            </a>
+                        </div>-->
+                        <div class="social-icons w-100 ml-auto">
+
+                            <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
+
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                        <i class="fab fa-linkedin-in fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw" style="color: #c69214;">
+                                        <i class="fab fa-youtube fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                        <i class="fab fa-instagram fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="list-unstyled-item" style="height:48px;">
+                                    <a href="https://api.whatsapp.com/send?phone=447894456554" style="color: #c69214;">
+                                        <i class="fab fa-whatsapp fa-2x"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
-    </div>
+    
     <div class="bottom">
         <ul class="nav justify-content-center mb-0">
             <li class="nav-item">
