--- a/templates/pages/metalic_pipe.html
+++ b/templates/pages/metalic_pipe.html
@@ -231,26 +231,26 @@
 
                 <div class="col-12 col-md-6 text-center text-md-left">
                     <h3 class="text-info">INTOPIPE</h3>
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'pages:homepage' %}">Home</a>
+                    <ul class="nav flex-column align-items-center align-items-md-start">
+                        <li class="nav-item col-4 pl-md-0">
+                            <a class="nav-link" href="{% url 'pages:homepage' %}">Homeland</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'pages:about' %}">OUR STORY</a>
+                        <li class="nav-item col-4 pl-md-0">
+                            <a class="nav-link" href="{% url 'pages:about' %}">Our Story</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Our Services</a>
+                        <li class="nav-item col-4 pl-md-0">
+                            <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Products</a>
                         </li>
 
-                        <li class="nav-item">
+                        <li class="nav-item col-4 pl-md-0">
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
 
-                        <li class="col-md-6 mt-3 mt-md-0">
+                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../../static/assets/img/fsc-1.png" alt=""/>
+                                <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
                     </ul>
@@ -262,13 +262,13 @@
                         <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
-                                Leuvensesteenweg 209
+                                Luisenstraße 1a
                             </li>
                             <li class="nav-item pb-1">
-                                2800 Mechelen
+                                Baden-Baden
                             </li>
                             <li class="nav-item pb-1">
-                                Belgium
+                                Germany
                             </li>
                             <li class="nav-item pb-1">
                                 <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
