--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -123,8 +123,7 @@
     </div>
 </section>
 <div
-        class="jumbotron in-page banner-3 banner-top text-center uppercase flex"
->
+        class="jumbotron in-page banner-3 banner-top text-center uppercase flex breakPoin70">
     <div class="container ">
         {% if category.short_description %}
             <h1 class="display-4 mb-3 pb-3 pt-3 py-lg-0">{{ category.title }}</h1>
