--- a/templates/pages/plastic_pipe_detail.html
+++ b/templates/pages/plastic_pipe_detail.html
@@ -210,9 +210,10 @@
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
                         </br>
-                        <li class="col-md-6">
+
+                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../../../static/assets/img/final.png" alt=""/>
+                                <img src="../../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
 
