--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -358,9 +358,9 @@
                                     
                                 </select>
                             </div>
-                            <div class="col-md-6 mb-3 pt-md-5 pt-3">
-                               <span class="pl-3">Your LOGO:</span> 
-                               <input class="d-flex col-9" type="file" id="logo" name ="logo">
+                            <div class="col-md-6 mb-3 pt-md-5 pt-3 pl-3">
+                               Your LOGO:
+                               <input class="col-9" type="file" id="logo" name ="logo">
                             </div>
                              
                             <div class="col-md-6 mb-3 px-3">
