--- a/templates/pages/paper_tube.html
+++ b/templates/pages/paper_tube.html
@@ -237,7 +237,7 @@
 
                         <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
-                                <img src="../static/assets/img/fsc-1.png" alt=""/>
+                                <img src="../../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
                     </ul>
